@@ -7,24 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    
-<p>Natamicina</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnNata" value="Solicitar muestra">
+  
+    <div id="contenedorMuestras">
+        <p>Natamicina</p>
+        <input type="button" name="muestra" class="btnMuestras" id="1" value="Solicitar muestra">
 
-<p>Beta Caroteno</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnBetaC" value="Solicitar muestra">
+        <p>Beta Caroteno</p>
+        <input type="button" name="muestra" class="btnMuestras" id="2" value="Solicitar muestra">
 
-<p>Sucralosa</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnSucra" value="Solicitar muestra">
+        <p>Sucralosa</p>
+        <input type="button" name="muestra" class="btnMuestras" id="3" value="Solicitar muestra">
 
-<p>Acesulfame K</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnAceK" value="Solicitar muestra">
+        <p>Acesulfame K</p>
+        <input type="button" name="muestra" class="btnMuestras" id="4" value="Solicitar muestra">
 
-<p>Dioxido de titanio</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnO2Ti" value="Solicitar muestra">
+        <p>Dioxido de titanio</p>
+        <input type="button" name="muestra" class="btnMuestras" id="5" value="Solicitar muestra">
 
-<p>Ácido cítrico</p>
-<input type="button" name="muestra" class="btnMuestras" id="btnACitri" value="Solicitar muestra">
+        <p>Ácido cítrico</p>
+        <input type="button" name="muestra" class="btnMuestras" id="6" value="Solicitar muestra">
+    </div>
 
 <h2 style="margin-top: 20px;">Muestras Solicitadas</h2>
 <table >
@@ -35,7 +37,7 @@
     <tr><td class="tabla"></td></tr>
 </table>
 
-<input type="button" value="Proceder a finalizar pedido" style="margin-top: 20px;" onclick=continuar()>
+<input type="button" id="continuarPedido" value="Proceder a finalizar pedido" style="margin-top: 20px;">
 
     <script src="./index.js"></script>
 </body>
